fixing text-align on swipe message

--- a/public/css/mediaQueries.css
+++ b/public/css/mediaQueries.css
@@ -260,8 +260,10 @@
         font-size: 0.9rem;
         font-weight: bold;
         top: 10vh;
-        left: 20%;
+        width: 100%;
+        text-align: center;
     }
+    
     /* HIDE SCROLLBAR  */
     *::-webkit-scrollbar {
         visibility: hidden;
